--- a/index.html
+++ b/index.html
@@ -7,16 +7,88 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
-    <a href="/">
-        WebStudio
-    </a>
-    <ul>
-        <li><a href="">Студия</a></li>
-        <li><a href="">Портфолио</a></li>
-        <li><a href="">Контакты</a></li>
+    <header>
+        <nav>
+            <a href="/">
+                WebStudio
+                </a>
+                <ul>
+                <li><a href="">Студия</a></li>
+                <li><a href="">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
+        </nav>
     </ul>
     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
     <a href="tel:+380961111111">+380961111111</a>
+    </header>
+    <div>
+        <section>
+            <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br />ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+            <a href="">Заказать услугу</a>
+        </section>
+    </div>
+    <section>
+        <ul>
+            <li>
+                <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+                <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+            </li>
+            <li>
+                <h3>ПУНКТУАЛЬНОСТЬ</h3>
+                <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+            </li>
+            <li>
+                <h3>ПЛАНИРОВАНИЕ</h3>
+                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+            </li>
+            <li>
+                <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h2>Чем мы занимаемся</h2>
+        <ul>
+            <li>
+                <img src="./images/picture1.jpg" alt="" width="370" />
+            </li>
+            <li>
+                <img src="./images/picture2.jpg" alt="" width="370" />
+            </li>
+            <li>
+                <img src="./images/picture3.jpg" alt="" width="370" />
+            </li>
+        </ul>
+    </section>
+    <section>
+        <h2>Наша команда</h2>
+        <ul>
+            <li>
+                <figure>
+                    <img src="./images/photo1.jpg" alt="" width="270" />
+                    <figcaption>Игорь Демьяненко Product Designer</figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <img src="./images/photo2.jpg" alt="" width="270" />
+                    <figcaption>Ольга Репина Frontend Developer</figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <img src="./images/photo3.jpg" alt="" width="270" />
+                    <figcaption>Николай Тарасов Marketing</figcaption>
+                </figure>
+            </li>
+            <li>
+                <figure>
+                    <img src="./images/photo4.jpg" alt="" width="270" />
+                    <figcaption>Михаил Ермаков UI Designer</figcaption>
+                </figure>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
