Take away figure and figcaption

--- a/index.html
+++ b/index.html
@@ -65,28 +65,20 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <figure>
                         <img src="./images/photo1.jpg" alt="" width="270" />
-                        <figcaption><h3>Игорь Демьяненко</h3> Product Designer</figcaption>
-                    </figure>
+                        <h3>Игорь Демьяненко</h3><p>Product Designer</p>
                 </li>
                 <li>
-                    <figure>
                         <img src="./images/photo2.jpg" alt="" width="270" />
-                        <figcaption><h3>Ольга Репина</h3> Frontend Developer</figcaption>
-                    </figure>
+                    <h3>Ольга Репина</h3><p>Frontend Developer</p>
                 </li>
                 <li>
-                    <figure>
-                        <img src="./images/photo3.jpg" alt="" width="270" />
-                        <figcaption><h3>Николай Тарасов</h3> Marketing</figcaption>
-                    </figure>
+                    <img src="./images/photo3.jpg" alt="" width="270" />
+                    <h3>Николай Тарасов</h3><p>Marketing</p>
                 </li>
                 <li>
-                    <figure>
-                        <img src="./images/photo4.jpg" alt="" width="270" />
-                        <figcaption><h3>Михаил Ермаков</h3> UI Designer</figcaption>
-                    </figure>
+                    <img src="./images/photo4.jpg" alt="" width="270" />
+                    <h3>Михаил Ермаков</h3><p>UI Designer</p>
                 </li>
             </ul>
         </section>
