--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Студия</title>
 </head>
 <body>
     <header>
         <nav>
             <a href="/">
-                WebStudio
-                </a>
+                <span>Web</span>Studio
+            </a>
                 <ul>
                 <li><a href="">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
@@ -24,10 +24,10 @@
        <main>
             <section>
                 <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br />ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-                <a href="">Заказать услугу</a>
+                <button>Заказать услугу</button>
             </section>
         <section>
-            <h2>Принципы компании</h2>
+            <h2>Преимущества компании</h2>
             <ul>
                 <li>
                     <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
@@ -51,13 +51,13 @@
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <img src="./images/picture1.jpg" alt="" width="370" />
+                    <img src="./images/picture1.jpg" alt="руки печатают на клавиатуре" width="370" height="294" />
                 </li>
                 <li>
-                    <img src="./images/picture2.jpg" alt="" width="370" />
+                    <img src="./images/picture2.jpg" alt="одна рука держит телефон а другая лежит на ноутбуке" width="370" height="294"/>
                 </li>
                 <li>
-                    <img src="./images/picture3.jpg" alt="" width="370" />
+                    <img src="./images/picture3.jpg" alt="рука держит планшет" width="370" height="294" />
                 </li>
             </ul>
         </section>
@@ -65,26 +65,31 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                        <img src="./images/photo1.jpg" alt="" width="270" />
+                        <img src="./images/photo1.jpg" alt="" width="270" height="260"/>
                         <h3>Игорь Демьяненко</h3><p>Product Designer</p>
                 </li>
                 <li>
-                        <img src="./images/photo2.jpg" alt="" width="270" />
+                        <img src="./images/photo2.jpg" alt="" width="270" height="260" />
                     <h3>Ольга Репина</h3><p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/photo3.jpg" alt="" width="270" />
+                    <img src="./images/photo3.jpg" alt="" width="270" height="260" />
                     <h3>Николай Тарасов</h3><p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/photo4.jpg" alt="" width="270" />
+                    <img src="./images/photo4.jpg" alt="" width="270" height="260" />
                     <h3>Михаил Ермаков</h3><p>UI Designer</p>
                 </li>
             </ul>
         </section>
        </main>
     <footer>
-
+        <span>Web</span>Studio
+        <address>
+            г. Киев, пр-т Леси Украинки, 26<br>
+            info@example.com<br>
+            +38 099 111 11 11
+        </address>
     </footer>
 </body>
 </html>
