make changes according mentor`s remarks
тегу "button" присвоєно атрибут, в футері з лого зроблено посилання, з мейлу і телефону також зроблено посилання, розмічено адресу тегом "р"

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
        <main>
             <section>
                 <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br />ДЛЯ ВАШЕГО БИЗНЕСА</h1>
-                <button>Заказать услугу</button>
+                <button type="button">Заказать услугу</button>
             </section>
         <section>
             <h2>Преимущества компании</h2>
@@ -84,11 +84,13 @@
         </section>
        </main>
     <footer>
-        <span>Web</span>Studio
+        <a href="/">
+            <span>Web</span>Studio
+        </a>
         <address>
-            г. Киев, пр-т Леси Украинки, 26<br>
-            info@example.com<br>
-            +38 099 111 11 11
+            <p>г. Киев, пр-т Леси Украинки, 26</p><br>
+            <a href="mailto:info@example.com">info@example.com</a><br>
+            <a href="tel:+380991111111">099 111 11 11</a>
         </address>
     </footer>
 </body>
