add text into 'alt'

--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                        <img src="./images/photo1.jpg" alt="" width="270" height="260"/>
-                        <h3>Игорь Демьяненко</h3><p>Product Designer</p>
+                    <img src="./images/photo1.jpg" alt="Улыбающийся молодой человек" width="270" height="260"/>
+                    <h3>Игорь Демьяненко</h3><p>Product Designer</p>
                 </li>
                 <li>
-                        <img src="./images/photo2.jpg" alt="" width="270" height="260" />
+                    <img src="./images/photo2.jpg" alt="" width="Улыбающаяся девушка" height="260" />
                     <h3>Ольга Репина</h3><p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/photo3.jpg" alt="" width="270" height="260" />
+                    <img src="./images/photo3.jpg" alt="Улыбающийся молодой человек" width="270" height="260" />
                     <h3>Николай Тарасов</h3><p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/photo4.jpg" alt="" width="270" height="260" />
+                    <img src="./images/photo4.jpg" alt="Улыбающийся молодой человек" width="270" height="260" />
                     <h3>Михаил Ермаков</h3><p>UI Designer</p>
                 </li>
             </ul>
